# VSCmake

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.D8623BE3480D1D3E.idx  math_utils.cpp.2F31E9681BCAB616.idx  math_utils.h.A49F5BAF675346AB.idx
src/: main.cpp  math_utils.cpp  math_utils.h  red_black_tree.cpp  red_black_tree.h
